test/files/neg/t7715.check
t7715.scala:10: error: $_ not supported in interpolated strings, except in patterns
  val rf = (n: Int) => s"\\*{$_}"(n).r
                              ^
t7715.scala:17: error: unbound placeholder parameter
  days zip days map s"${_: Int} by ${_: Int}".tupled foreach println
                        ^
t7715.scala:17: error: unbound placeholder parameter
  days zip days map s"${_: Int} by ${_: Int}".tupled foreach println
                                     ^
three errors found
